Avoid unnecessary cloning of text object when instantiating ScEditCell.

This alone cuts about 3 seconds off of the total import time with the
test document from fdo#54638.

Change-Id: I3be3229532b9e982f03565fd3fb630f70f2bce03